syntax = "proto3";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

message CategoryProto {
  string categoryId = 1;
  string categoryName = 2;
}

